name:                 emu-holdem
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               
maintainer:           
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable emu-holdem
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , random
                      , parallel
                      , deepseq
  ghc-options:         -O2 -threaded -rtsopts
  hs-source-dirs:       src
  default-language:     Haskell2010
